@@ -1,3 +1,9 @@
+2011-09-28  Doug Evans  <dje@google.com>
+
+	* timeval-utils.h: New file.
+
+	* libiberty.h (countargv): Declare.
+
 2011-09-26  Cary Coutant  <ccoutant@google.com>
 
 	gcc PR lto/47247
